--- a/layouts/partials/svg.html
+++ b/layouts/partials/svg.html
@@ -933,6 +933,27 @@ stroke-linecap="round" stroke-linejoin="round">
         d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z">
     </path>
 </svg>
+{{- else if (eq $icon_name "x") -}}
+<svg version="1.1" baseProfile="basic" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+	 y="0px" viewBox="0 0 50 50" xml:space="preserve">
+<g id="Layer_10">
+</g>
+<g id="win10">
+</g>
+<g id="ssm">
+</g>
+<g id="mat_2">
+</g>
+<g id="ios">
+</g>
+<g id="fluent">
+	<polygon points="42.204,6 9.406,44 6.229,44 39.027,6 	"/>
+	<path style="fill-rule:evenodd;clip-rule:evenodd;" d="M32.986,44L6.92,6h10.014L43,44H32.986z"/>
+</g>
+</svg>
+{{- else if (eq $icon_name "linkedin") -}}
+<svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 30 30" width="60px" height="60px" >
+    <path d="M24,4H6C4.895,4,4,4.895,4,6v18c0,1.105,0.895,2,2,2h18c1.105,0,2-0.895,2-2V6C26,4.895,25.105,4,24,4z M10.954,22h-2.95 v-9.492h2.95V22z M9.449,11.151c-0.951,0-1.72-0.771-1.72-1.72c0-0.949,0.77-1.719,1.72-1.719c0.948,0,1.719,0.771,1.719,1.719 C11.168,10.38,10.397,11.151,9.449,11.151z M22.004,22h-2.948v-4.616c0-1.101-0.02-2.517-1.533-2.517 c-1.535,0-1.771,1.199-1.771,2.437V22h-2.948v-9.492h2.83v1.297h0.04c0.394-0.746,1.356-1.533,2.791-1.533 c2.987,0,3.539,1.966,3.539,4.522V22z"/></svg>
 {{- else if (eq $icon_name "unsplash") -}}
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 40">
     <path fill="none" stroke="currentColor" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="4"
